@@ -4,9 +4,11 @@ pod_spelling_system:
   # (regardless of what spell check thinks)
   stopwords:
     - tabstop
+    - nauty
 
 pod_coverage:
   # format is "Class#method" or "Class", regex allowed
   # for either Class or method.
   private:
     - Dist::Zilla::Plugin::TextTabs#munge_files?
+    - Dist::Zilla::Plugin::TextTabs#setup_installer
